added proxy as module

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "etc/master"]
 	path = etc/master
 	url = git@github.com:GL0K3/.proxy.git
+[submodule "etc/proxy"]
+	path = etc/proxy
+	url = git@github.com:GL0K3/.proxy.git
