--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,15 @@
 [submodule "etc/proxy"]
 	path = etc/proxy
 	url = git@github.com:GL0K3/.proxy.git
+[submodule ".config/nvim"]
+	path = .config/nvim
+	url = git@github.com:GL0K3/.nvim.git
+[submodule ".config/tmux"]
+	path = .config/tmux
+	url = git@github.com:GL0K3/.tmux.git
+[submodule ".config/kitty"]
+	path = .config/kitty
+	url = git@github.com:GL0K3/.kitty.git
+[submodule ".config/hypr"]
+	path = .config/hypr
+	url = git@github.com:GL0K3/.hypr.git
