--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule ".config/hypr"]
 	path = .config/hypr
 	url = git@github.com:GL0K3/.hypr.git
+[submodule "etc/nixos"]
+	path = etc/nixos
+	url = git@github.com:GL0K3/.nixos.git
